# pyshop

./: Makefile  pyproject.toml
app/: task_1.py  task_2.py  task_3.py  tmp.py
selenium_scraper/: settings.py
selenium_scraper/spiders/: scraping_club.py  shop.py
